# flux-purr

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  PRODUCT.md  README.md  lefthook.yml  mcu-agentd.toml  package.json
.cargo/: config.toml
.github/: quality-gates.json
.github/scripts/: check-quality-gates.py  compute-version-fw.sh  compute-version-product.sh  compute-version-web.sh  label-gate.sh  product_release_manifest.py  release-intent.sh  release_snapshot.py  test-release-labels.sh  test-version-scripts.sh
.github/workflows/: ci-main.yml  ci.yml  label-gate.yml  notify-release-failure.yml  release-firmware.yml  release-web.yml  release.yml
docs/guides/: flux-purr-developer-policy.md  ui-ux-pro-max.md
docs/hardware/: c3-frontpanel-baseline.md  enclosure-5p6cm.md  fan-pcb-variants.md  heater-plate-design.md  heater-power-switch-design.md  heater-stack-support-7p0cm.md  s3-frontpanel-baseline.md  tps62933-dual-rail-power-design.md
docs/hardware/heater-plates/: heater-5p6-3p2.md  heater-5p6-4p5.md  heater-7p0-3p2.md
docs/hardware/netlists/: front-panel-board.enet  main-controller-board.enet
docs/interfaces/: http-api.md
docs/research/mini-hotplate/: 01-source-catalog.md  02-reference-design-summary.md  03-variant-delta-kinglf-vs-original.md  04-hardware-firmware-behavior-map.md  05-assembly-flash-troubleshooting.md  06-license-and-compliance-notes.md  07-secondary-dev-risks-and-opportunities.md  README.md
docs/solutions/device-control/: calibration-data-packet-collection.md  web-native-wifi-bridge-console.md
docs/specs/: README.md
docs/specs/22222-worktree-bootstrap/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/223uj-frontpanel-ui-contract/: SPEC.md
docs/specs/233y7-c3-ch224q-ch442e-frontpanel/: SPEC.md
docs/specs/35bta-eeprom-memory-config/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/3dczp-enclosure-5p6cm-models/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/744yg-mini-hotplate-doc-baseline/: SPEC.md
docs/specs/8tesd-s3-fan-cycle-bringup/: SPEC.md
docs/specs/fk3u7-frontpanel-input-interaction/: SPEC.md
docs/specs/hhwq8-web-control-plane-demo/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/jb85u-release-failure-telegram-alerts/: SPEC.md
docs/specs/jt8r2-adc-calibration-control-plane/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/kht7p-heater-7p0-3p2-variant/: SPEC.md
docs/specs/m8r4q-real-control-plane-runtime/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/n6csh-flux-purr-init/: SPEC.md
docs/specs/q2aw6-heater-pid-frontpanel-runtime/: SPEC.md
docs/specs/r9k3m-pr-label-release-protection/: HISTORY.md  IMPLEMENTATION.md  SPEC.md
docs/specs/v5k2p-dual-fan-pcb-variants/: SPEC.md
docs/specs/vmekj-s3-gc9d01-display-bringup/: SPEC.md
firmware/: Cargo.toml  README.md  build.rs
firmware/.cargo/: config.toml
firmware/scripts/: generate_frontpanel_carousel_assets.py
firmware/src/: buzzer.rs  control_plane.rs  lib.rs  memory.rs
firmware/src/adapters/: ch224q.rs  ch442e.rs  mod.rs  tca6408a.rs
firmware/src/board/: c3_frontpanel.rs  mod.rs  s3_frontpanel.rs
firmware/src/display/: mod.rs
firmware/src/frontpanel/: mod.rs  render.rs
scripts/: bootstrap-dev.sh  check-devd.sh  check-firmware-build.sh  check-firmware-clippy.sh  check-firmware-fmt.sh  check-storybook-build.sh  check-web-build.sh  check-web-check.sh  check-web-e2e.sh  collect-calibration-data-packet.py  devd-hardware-smoke.py  install-hooks.sh  post-checkout-bootstrap.sh  run-lefthook-hook.sh  test-worktree-bootstrap.sh
skills/flux-purr-developer-operations/: SKILL.md
skills/flux-purr-developer-operations/agents/: openai.yaml
skills/flux-purr-developer-policy/: SKILL.md
skills/flux-purr-developer-policy/agents/: openai.yaml
skills/flux-purr-user-operations/: SKILL.md
skills/flux-purr-user-operations/agents/: openai.yaml
tools/flux-purr-devd/: Cargo.toml
tools/flux-purr-devd/src/: lib.rs  main.rs
web/: README.md  biome.json  eslint.config.js  package.json  playwright.config.ts  vite.config.ts
web/e2e/: control-plane-devd.spec.ts
web/scripts/: live-hardware-smoke.mjs
web/src/: App.tsx  app-mode.test.ts  app-mode.ts  index.css  main.tsx
web/src/components/ui/: card.tsx  select.tsx  (+5 more)
web/src/stories/: ConsoleLayout.stories.tsx  ControlPlaneDemo.stories.tsx  ControlPlaneToolbar.stories.tsx  DeviceStatusCard.stories.tsx  FrontPanelDisplay.stories.tsx  TelemetryTrendCard.stories.tsx  WifiConfigForm.stories.tsx
(+53 files in other folders)
