[package]
name = "flux-purr-firmware"
version = "0.1.0"
edition = "2024"
description = "Flux Purr firmware domain crate (ESP32-S3 display bring-up + host preview)"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "esp32s3-fan-cycle"
path = "src/bin/esp32s3_fan_cycle.rs"

[features]
default = ["esp32s3"]
esp32s3 = []
esp32c3 = []

[dependencies]
embassy-futures = "0.1.2"
embedded-graphics = "0.8.1"
gc9d01 = { git = "https://github.com/IvanLi-CN/gc9d01-rs", rev = "6b75d9dc818be04e57932b750a7d209aaed3bd57", features = ["async", "defmt", "panel_160x50"] }
heapless = "0.8.0"

[target.'cfg(target_arch = "xtensa")'.dependencies]
defmt = "1.0.1"
embassy-executor = "0.7.0"
embassy-time = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
esp-backtrace = { version = "0.17.0", features = ["esp32s3", "panic-handler", "println"] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable", "defmt"] }
esp-hal-embassy = { version = "0.9.1", features = ["esp32s3", "defmt"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-println = { version = "0.15.0", features = ["esp32s3", "defmt-espflash"] }
static_cell = "2.1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
