[package]
name = "flux-purr-devd"
version = "0.1.0"
edition = "2024"
description = "Native localhost daemon for Flux Purr USB/control-plane workflows"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "flux-purr-devd"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.8.1"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3.23.0"
